<resources>
    <string name="app_name">Veg Cart</string>
    <string name="some_natural_fact">Some Natural Fact :</string>
    <string name="visit_food">Visit Food</string>
    <string name="benefits">Benefits</string>
    <string name="precautions">Precautions</string>
    <string name="help_heal">Help to heal</string>
    <string name="open">Open Navigation drawer</string>
    <string name="close">Close Navigation drawer</string>
    <string name="office_address">Kota, Rajasthan</string>
    <string name="contact_us">Contact Us</string>
    <string name="slogan">WE Provide Fresh food</string>

    <string name="notification_add_to_cart_button">Like</string>
    <string name="group_name">Group 1</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="data_not_available">Data not Available</string>
    <string name="logo">Logo</string>
    <string name="food_item_image">Food Item Image</string>
    <string name="vegetable_name">Vegetable Name</string>
    <string name="vegetable_name_in_hindi">Vegetable name in hindi</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="advantages">Advantages</string>
    <string name="heal_disease">Heal Disease</string>
    <string name="vitamin_amp_mineral"><![CDATA[Vitamin & Mineral]]></string>
    <string name="vitamins">Vitamins</string>
    <string name="ordered_food_image">ordered food image</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="address">Address</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="github_profile">github.com/rahulkhatri19</string>
    <string name="twitter_profile">twitter.com/rahulkhatri019</string>
    <string name="linkedin_profile">linkedin.com/in/rahulkhatri19</string>
    <string name="facebook_profile">facebook.com/rahulkhatri19</string>
    <string name="gmail_id">khatri.rahul019@gmail.com</string>
    <string name="please_wait">Please Wait ...</string>
    <string name="order_product">Order Product</string>
    <string name="cancel">Cancel</string>
    <string name="checkout_cart">Checkout Cart</string>
    <string name="productImage">Product Image</string>
    <string name="kg">Kg</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="amount">₹ %1$s</string>
    <string name="pricePerkg">₹ %1$s per KG</string>
    <string name="addToCart">Add to Cart</string>
    <string name="bucket">bucket</string>
    <string name="cart">Cart</string>
</resources>
