<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    app:cardCornerRadius="8dp"
    card_view:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/llMain"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:contentDescription="@string/food_item_image"
            android:scaleType="centerCrop"
            android:src="@drawable/cauliflower" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/vegetable_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name_hindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/vegetable_name_in_hindi"
                android:textAlignment="center"
                android:textSize="18sp" />
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>