<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" tools:context="in.example.rahul.vegcartpro.activity.ContactActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/rklogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:text="@string/slogan"
                android:textColor="#00796B"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                tools:paddingHorizontal="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/contact_us"
                android:textSize="35sp"
                android:fontFamily="monospace"
                android:layout_marginTop="100dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/address"
                android:textSize="20sp"
                android:fontFamily="monospace"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/facebook4"
                    android:layout_weight="1"
                    android:id="@+id/img_btn1"
                    android:scaleType="fitXY"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/octocat"
                    android:layout_weight="1"
                    android:id="@+id/img_btn2"
                    android:scaleType="fitCenter"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/linkedin2"
                    android:layout_weight="1"
                    android:id="@+id/img_btn3"
                    android:background="@android:color/white"
                    android:scaleType="fitCenter"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/gplus2"
                    android:layout_weight="1"
                    android:id="@+id/img_btn4"
                    android:scaleType="fitCenter"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

